tools: dependencies update